feat: added `export jlink`
This export uses the `jlink` command to create a Jdk distribution solely
for the given script. If a main class is set it will also create a
launcher specifically for running the packaged script.